Artifact query now also retrieves release dates if the Maven indexer file indicates no changes but latest release/snapshot or user-provided version number do not have a release date assigned just yet

--- a/server/src/main/resources/markup/page.html
+++ b/server/src/main/resources/markup/page.html
@@ -44,7 +44,11 @@
 <body>
 <div class="table">
   ${tableContent}
+  <form action="${baseUrl}/resetstatistics">
+    <input type="submit" style="margin:25px" value="Reset Statistics" />
+  </form>
 </div>
+
 <!-- search -->
 <div style="margin-top:15px">
   <form autocomplete="off" action="" onsubmit="return false">
